--- a/DMDE/pom.xml
+++ b/DMDE/pom.xml
@@ -24,7 +24,12 @@
         <version>5.11.0</version>
         <type>pom</type>
         <scope>import</scope>
-      </dependency>
+    </dependency>
+      <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.10.1</version>
+    </dependency>
     </dependencies>
   </dependencyManagement>
 
