--- a/DMDE/pom.xml
+++ b/DMDE/pom.xml
@@ -45,7 +45,12 @@
           <groupId>com.google.code.gson</groupId>
           <artifactId>gson</artifactId>
           <version>2.11.0</version>
-      </dependency>
+      </dependency> 
+    <dependency> 
+        <groupId>com.opencsv</groupId> 
+        <artifactId>opencsv</artifactId> 
+        <version>4.1</version> 
+    </dependency> 
   </dependencies>
 
   <build>
