--- a/config.json
+++ b/config.json
@@ -2,9 +2,9 @@
   "N": 300,
   "mass": 1.0,
   "velocity": 1.0,
-  "time_step": 0.0001,
+  "time_step": 0.0005,
   "max_frames": 10000,
-  "movable_obs": true,
-  "obstacle_mass": 3,
+  "movable_obs": false,
+  "obstacle_mass": 1,
   "first": false
 }
