fixed some plots

--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
   "velocity": 1.0,
   "time_step": 0.0005,
   "max_frames": 30000,
-  "movable_obs": false,
-  "obstacle_mass": 1,
-  "first": true 
+  "movable_obs": true,
+  "obstacle_mass": 3,
+  "first": false 
 }
